# app/Http/Controllers/api/api.php
@@ -1,0 +1,25 @@
+<?php
+/**
+ * @license Nginx
+ */
+/**
+ * @OA\Info(
+ *     description="This is api doc.",
+ *     version="1.0.0",
+ *     title="ALAMH API",
+ *     @OA\Contact(
+ *         email="561272831@qq.com"
+ *     )
+ * )
+ */
+
+/**
+ * @OA\Tag(
+ *     name="invoice",
+ *     description="invoice info"
+ * )
+ * @OA\ExternalDocumentation(
+ *     description="Find out more about Swagger",
+ *     url="http://swagger.io"
+ * )
+ */
